--- a/package.json
+++ b/package.json
@@ -11,14 +11,19 @@
   },
   "dependencies": {
     "@generouted/react-router": "^1.15.9",
+    "@radix-ui/react-popover": "^1.0.7",
     "@reduxjs/toolkit": "^1.9.6",
-    "lucide-react": "^0.284.0",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.0.0",
+    "lucide-react": "^0.287.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.47.0",
     "react-redux": "^8.1.3",
     "react-router-dom": "^6.16.0",
     "socket.io-client": "^4.7.2",
+    "tailwind-merge": "^1.14.0",
+    "tailwindcss-animate": "^1.0.7",
     "vite-tsconfig-paths": "^4.2.1"
   },
   "devDependencies": {
